test/error/ast/ArrayLenTooBig.mod
MODULE ArrayLenTooBig;
TYPE A = ARRAY 100000000 OF INTEGER;
END ArrayLenTooBig.
